fix: reset iframe source when user role is not found

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         getUserRole().then(role=>{
             if(!role){
                 $("a").hide()
+                iframe.src = "";
             }
             else{
                 $.getJSON("https://yehormovchan.github.io/assets/permits.json", (data)=>{
