fix: update schedule row display to include time range for clarity

--- a/iframe-content/staff/staff-schedule.html
+++ b/iframe-content/staff/staff-schedule.html
@@ -127,9 +127,9 @@
 
                     let maxRows = 8;
 
-                    for (let i = 0; i < maxRows; i++) {
+                    for (let i = 0, time = 9; i < maxRows; i++, time++) {
                         let tr = document.createElement("tr");
-                        tr.appendChild(document.createElement("td")).innerText = i + 1;
+                        tr.appendChild(document.createElement("td")).innerText = `${i + 1} (${time}:00 - ${time}:45)`;
                         let td;
                         for (let j = 0; j < schedule.length; j++) {
                             td = document.createElement("td");
