--- a/iframe-content/staff/staff-schedule.html
+++ b/iframe-content/staff/staff-schedule.html
@@ -133,7 +133,7 @@
                 
                 let postData = [];
                 presentMembers.forEach(memberId => {
-                    postData.push({ date: selectedDate, kid: memberId, groupId: groupId });
+                    postData.push({ date: selectedDate, kid: memberId, group: groupId });
                 });
                 
                 // API запит для збереження відвідування гуртка
