--- a/iframe-content/student/transactions.html
+++ b/iframe-content/student/transactions.html
@@ -57,11 +57,12 @@
                 let tableBody = $("#transactions-body");
                 tableBody.empty();
                 data.forEach(transaction => {
+                    let additionalInfo = transaction.additionalInfo ? `Оплата за: ${transaction.additionalInfo}` : 'Немає';
                     tableBody.append(`
                         <tr>
                             <td>${transaction.date}</td>
                             <td>${transaction.transactionTypeName}</td>
-                            <td>Оплата за: ${transaction.groupName || ''}</td>
+                            <td>${additionalInfo}</td>
                             <td>${transaction.sum} грн</td>
                             <td>${transaction.receipt ? '<a href="' + transaction.receipt + '" target="_blank">Квитанція</a>' : 'Немає'}</td>
                         
