--- a/iframe-content/staff/staff-schedule.html
+++ b/iframe-content/staff/staff-schedule.html
@@ -186,7 +186,7 @@
                         // Відправка транзакцій
                         $.ajax({
                             type: "POST",
-                            url: "http://localhost:8080/transaction/list",
+                            url: "http://localhost:8080/transaction/groups-list",
                             contentType: "application/json",
                             data: JSON.stringify(transactions),
                             success: function(response) {
