--- a/iframe-content/student/transactions.html
+++ b/iframe-content/student/transactions.html
@@ -41,7 +41,7 @@
                 $.getJSON(`http://localhost:8080/transaction/sum/${kidId}`, function(data) {
                     let totalSum = data;
                     $("#total-sum").text(`Баланс: ${totalSum} грн`);
-                    if(totalSum) {
+                    if(totalSum >= 0) {
                         $("#total-sum").css("color", "#388e3c");
                         $("#total-sum").css("background-color", "#d4edda");
                     } else {
