fix: update program members display to use correct container

--- a/iframe-content/programs/groups.html
+++ b/iframe-content/programs/groups.html
@@ -35,7 +35,7 @@
                         currentPrograms.add(member.groupId);
                         membersList += `<li>${member.groupName} </li>`;
                     });
-                    $("#program-members").html(membersList);
+                    $("#program-groups").html(membersList);
                     loadgroups();
                 });
             }
