fix: correct variable name from membersList to groupList in loadProgramGroups function

--- a/iframe-content/programs/groups.html
+++ b/iframe-content/programs/groups.html
@@ -35,7 +35,7 @@
                         currentPrograms.add(group.groupId);
                         groupList += `<li>${group.groupName} </li>`;
                     });
-                    $("#program-groups").html(membersList);
+                    $("#program-groups").html(groupList);
                     loadgroups();
                 });
             }
