fix: update data object key from group to _group in add-group functionality

--- a/iframe-content/programs/groups.html
+++ b/iframe-content/programs/groups.html
@@ -59,7 +59,7 @@
                 const groupId = $("#group-select").val();
                 const data = {
                     program: programId,
-                    group: groupId
+                    _group: groupId
                 };
                 $.ajax({
                     url: "http://localhost:8080/program-groups",
