--- a/iframe-content/programs/groups.html
+++ b/iframe-content/programs/groups.html
@@ -33,7 +33,7 @@
                     let groupList = "";
                     data.forEach(group => {
                         currentPrograms.add(group.groupId);
-                        groupList += `<li>${group.groupName} </li>`;
+                        groupList += `<li>${group.groupName} <button id="delete-group" data-id=${data.id}>Видалити</button> </li>`;
                     });
                     $("#program-groups").html(groupList);
                     loadgroups();
@@ -54,6 +54,19 @@
 
             
     
+            $("#program-groups").on("click", "#delete-group", function() {
+                const id = $(this).data("id");
+                $.ajax({
+                    url: `http://localhost:8080/program-groups/${id}`,
+                    type: "DELETE",
+                    success: function() {
+                        loadProgramGroups();
+                    },
+                    error: function() {
+                        alert("Error deleting group from program.");
+                    }
+                });
+            });
 
             $("#add-group").on("click", () => {
                 const groupId = $("#group-select").val();
