--- a/iframe-content/staff/staff-schedule.html
+++ b/iframe-content/staff/staff-schedule.html
@@ -326,7 +326,7 @@
                                         }
                                         $("#date-select").html(dateOptions);
                                         
-                                        $.getJSON(`http://localhost:8080/kid/grade=${item.classField}`, function(students) {
+                                        $.getJSON(`http://localhost:8080/kid/students/grade=${item.classField}`, function(students) {
                                             let studentList = students.map(student => 
                                                 `<li><input type="checkbox" value="${student.id}"> ${student.name}</li>`
                                             ).join("");
