feat: add settings page and update links and permissions

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                     <li><a id="programs-list" href="#programs-type" onclick="changePage(this)">Програми навчання</a></li>
                     <li><a id="staff-schedule" href="#staff-schedule" onclick="changePage(this)">Розклад</a></li>
                     <li><a id="personal-account" href="#personal-account" onclick="changePage(this)">Особистий кабінет</a></li>
+                    <li><a id="settings" href="#settings" onclick="changePage(this)">Налаштування</a></li>
                 </ul>
             </nav>
             <div class="user-info">
