fix: restructure HTML for subject list display in settings

--- a/iframe-content/settings.html
+++ b/iframe-content/settings.html
@@ -15,13 +15,13 @@
 <body>
    <div class="headline"><h1>Налаштування</h1></div>
 
-   <div class="settings-item">
+   <div class="headline">
         <h3>Предмети</h3>
         <div class="add-button-container">
             <button class="add-button" onclick="$('#add-entity-modal').fadeIn()">+ Додати</button>
         </div>
-        <div id="subject-list" class="item-list"></div>
-   </div>
+    </div>
+    <div id="subject-list" class="item-list"></div>
 </body>
 
 <script>
