fix: update lesson price request data to set 'from' to today and 'to' to null

--- a/iframe-content/settings.html
+++ b/iframe-content/settings.html
@@ -578,8 +578,8 @@
             
             const requestData = {
                 price: price,
-                from: null,
-                to: today,
+                from: today,
+                to: null,
                 reasonOfChange: reason
             };
             
